--- a/lesson7/confetti_cuisine/package.json
+++ b/lesson7/confetti_cuisine/package.json
@@ -1,14 +1,14 @@
 {
   "name": "confetti_cuisine",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Thabiso",
   "license": "ISC",
   "dependencies": {
     "http-status-codes": "^2.2.0"
-  }
+  },
+  "description": ""
 }
