--- a/lesson14/recipe_app/package.json
+++ b/lesson14/recipe_app/package.json
@@ -10,9 +10,11 @@
   "author": "Jon Wexler",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.9",
     "express": "^4.16.3",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.3",
     "http-status-codes": "^1.4.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.13.20"
